--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+    }
+</style>
 <body>
     <iframe style="width: 100%; height: 100vh;" src="./resume.pdf"></iframe>
 </body>
